Visual bug fixes
* remove grid layout on home page. Just too much bother.
* underline links on hover
* fuss over mobile views--hover, footer

--- a/css/additional-content.css
+++ b/css/additional-content.css
@@ -21,7 +21,8 @@
 .card a:active {
   color: var(--text-blue);
 }
-.card a:hover {
+.card a:hover,
+.card a:active {
   text-decoration: underline;
 }
 .card header {
