--- a/css/home.css
+++ b/css/home.css
@@ -4,8 +4,11 @@
   font-family: Helvetica, sans-serif;
   font-weight: bold;
   background-color: var(--branch-background);
+  border-collapse: collapse;
+  border-color:  var(--home-main-border);
+  border-style: solid;
+  border-top-width: 10px;
 }
-
 .branch .info {
   margin-left: 10px;
   margin-right: 10px;
@@ -113,18 +116,14 @@
 }
 
 .home {
-  background-color: var(--home-background);
   border: 10px solid var(--home-main-border);
-  row-gap: 10px;
 }
 .home .banner img {
   margin-right: 10px;
 }
-/* Mobile layout */
+/* Mobile and tablet layout */
 @media only screen and (max-width: 767px) {
-  .home {
-    grid-template-rows: auto;
-  }
+
 }
 /* Tablet only */
   @media only screen and (min-width: 768px) and (max-width: 1024px) {
@@ -134,7 +133,6 @@
 @media only screen and (min-width: 768px) {
   .home {
     box-sizing: border-box;
-    grid-template-rows: repeat(4, minmax(238px, auto));
   }
   .branch {
     display: flex;
