--- a/css/main.css
+++ b/css/main.css
@@ -209,11 +209,7 @@ input[type=submit] {
    Responsive design.
    ========================================================================== */
 /* Default layout */
-.container {
-  display: grid;
-  grid-template-columns: minmax(0, 1fr);
-  gap: 5px 10px;
-}
+
 
 /* Mobile-only */
 @media only screen and (max-width: 375px) {
